grader/src/main/java/reports/Autograder_report.txt
Compilation Failed

Main.java:10: error: class Autograder is public, should be declared in a file named Autograder.java
public class Autograder {
       ^
1 error
